# siem-query-utils

./: .devcontainer.json  .gitignore  .gitmodules  Dockerfile  Dockerfile.appservice  README.md  SECURITY.md  develop.sh  example_env  host.json  install.sh  main.py  models.py  package-lock.json  package.json  pyproject.toml  query-sentinel.py  requirements.txt  sqlitecache.py  startup.sh  update.sh
.devcontainer/: devcontainer.json
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-publish.yml  main_siemqueryutils-testing.yml  snyk-container.yml  trivy.yml
appservice/: .bashrc  sshd_config
atlaskit-transformer/: atlaskit-transformer.js  main.mjs  package-lock.json  package.json
flows/: jira_issues-deployment.yaml  jira_issues.py  jira_issues.yaml
kql/: Sentinel-ConnectorHealth.kql  distinct-aadidentities.kql  distinct-endpointdevices.kql  distinct-identities.kql  distinct-tenantids.kql  graph-workspaces.kql
pythonhelpers/sentinel-beautify/: __init__.py  function.json
scripts/: install-quarto.sh
siem_query_utils/: __init__.py  api.py  assets.py  azcli.py  proxy.py  reporting.py  sentinel_beautify.py
siem_query_utils/js/: atlaskit-transformer.mjs
siem_query_utils/kql/: distinct-aadapps.kql  distinct-domains.kql  distinct-endpointdevices.kql  distinct-identities.kql
siem_query_utils/templates/: email-template.html  esparto-pdf.css
templates/: email-template.html
tests/: test_siem_query_utils.py
v1/: function.json
