[tool.black]
line-length = 100
skip-magic-trailing-comma = true
preview = true

[tool.ruff]
line-length = 120

[tool.poetry]
name = "siem-query-utils"
version = "2.0.1"
description = ""
authors = ["Adon Metcalfe <adonm@fastmail.fm>"]
readme = "README.md"
packages = [{ include = "siem_query_utils" }]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.5.0"
cacheout = "^0.14.1"
markdown = "^3.4.1"
flatten-json = "^0.1.13"
pathvalidate = "^2.5.2"
httpx-cache = "^0.7.0"
cloudpathlib = { extras = ["azure"], version = "^0.12.1" }
azure-storage-blob = "^12.14.1"
esparto = "^4.2.0"
tinycss2 = "^1.2.1"
python-dotenv = "^0.21.0"
papermill = "^2.4.0"
azure-cli = "^2.43.0"
azure-kusto-data = {extras = ["pandas"], version = "^4.0.2"}
ipython = "^8.8.0"
python-dateutil = "^2.8.2"
ipywidgets = "^8.0.4"
seaborn = "^0.12.2"
httpx = "^0.23.3"
pandas = "^1.5.2"
requests = "^2.28.1"
starlette = "^0.22.0"
uvicorn = "^0.20.0"
fastapi = "^0.89.0"
itsdangerous = "^2.1.2"
weasyprint = "^57.2"
sigma-cli = "^0.5.3"
schedule = "^1.1.0"
jupyterlab = "^3.5.2"

[tool.poetry.scripts]
siem_query_utils = "siem_query_utils:cli"

[tool.poetry.group.dev.dependencies]
black = { version = "^22.12.0", allow-prereleases = true }
pytest = "^7.2.0"
poetry = "^1.3.1"
poetry-plugin-up = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
