[tool.black]
line-length = 100
skip-magic-trailing-comma = true
preview = true

[tool.ruff]
line-length = 120

[tool.dagster]
module_name = "siem_query_utils"

[tool.poetry]
name = "siem-query-utils"
version = "2.1.0"
description = ""
authors = ["Adon Metcalfe <adonm@fastmail.fm>"]
readme = "README.md"
packages = [{ include = "siem_query_utils" }]

[tool.poetry.dependencies]
python = "^3.10"
cacheout = "^0.14.1"
markdown = "^3.4.1"
flatten-json = "^0.1.13"
pathvalidate = "^2.5.2"
httpx-cache = "^0.7.0"
cloudpathlib = { extras = ["azure"], version = "^0.12.1" }
azure-storage-blob = "^12.14.1"
esparto = "^4.2.0"
tinycss2 = "^1.2.1"
papermill = "^2.4.0"
azure-cli = "^2.44.1"
azure-kusto-data = {extras = ["pandas"], version = "^4.0.2"}
ipython = "^8.8.0"
python-dateutil = "^2.8.2"
ipywidgets = "^8.0.4"
seaborn = "^0.12.2"
httpx = "^0.23.3"
pandas = "^1.5.3"
requests = "^2.28.2"
starlette = "^0.22.0"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
itsdangerous = "^2.1.2"
weasyprint = "^57.2"
sigma-cli = "^0.5.3"
schedule = "^1.1.0"
jupyterlab = "^3.5.2"
pyarrow = "^10.0.1"
jiraone = "^0.7.3"
dagster = "^1.1.14"
dagit = "^1.1.14"
pytest = "^7.2.1"
jupytext = "^1.14.4"
black = { version = "^22.12.0", allow-prereleases = true }
poetry = "^1.3.1"
poetry-plugin-up = "^0.2.1"
prefect = "^2.7.10"
pip = "^22.3.1"
greenlet = "^2.0.2"

[tool.poetry.scripts]
siem_query_utils = "siem_query_utils:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
